<resources>
    <string name="app_name">Movie Catalogue Final Sub</string>

    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="favorite">Favorite</string>

    <string name="movie_catalogue">Movie Catalogue</string>
    <string name="tv_show_catalogue">TV Show Catalogue</string>

    <string name="dummy_title">Aquaman</string>
    <string name="dummy_rating">7.5</string>
    <string name="dummy_release_date">January 16, 2019</string>
    <string name="dummy_release_year">2019</string>
    <string name="dummy_year">2018</string>
    <string name="dummy_overview">Seasoned musician Jackson Maine discovers - and falls in love with - struggling artist Ally. She has just about given up on her dream to make it big as a singer - until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</string>

    <string name="image_poster">Image Poster</string>
    <string name="image_backdrop">Image Backdrop</string>
    <string name="image_favorite">Image Favorite</string>

    <string name="overview">Overview</string>
    <string name="data_is_empty">Data is empty!</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorite">Remove from favorite</string>

    <string name="search_result">Search Result</string>
    <string name="search">Search</string>
    <string name="search_movie">Search Movie</string>
    <string name="search_tv_show">Search TV Show</string>
    <string name="data_not_found">Data not found!</string>

    <string name="appwidget_text">Favorite Movie Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="favorite_movie_widget">Favorite Movie Widget</string>
    <string name="no_data">No Data</string>
    <string name="settings">Settings</string>

    <string name="release_reminder">Release Reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="change_language">Change Language</string>

    <string name="key_daily_reminder">key_daily_reminder</string>
    <string name="key_release_today_reminder">key_release_today_reminder</string>
    <string name="key_change_language">key_change_language</string>

    <string name="message_daily_reminder">Return to Movie Catalogue App</string>
    <string name="cancel_daily_reminder">Cancel daily reminder</string>

    <string name="message_release_today_reminder">Release Today Reminder</string>
    <string name="cancel_release_today_reminder">Cancel release today reminder</string>

    <string name="text_summary_daily_reminder">Reminder return to Movie Catalogue App</string>
    <string name="text_summary_release_today_reminder">Reminder to display the movies information that is released today</string>
    <string name="text_summary_change_language">Change App language</string>

    <string name="notification">Notification</string>
    <string name="language">Language</string>

    <string name="daily_reminder_set_up">Daily Reminder set up</string>
    <string name="release_today_set_up">Release Today Reminder set up</string>

    <string name="has_release_today">has release today!</string>
</resources>
