<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_list_favorite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_poster_favorite"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:contentDescription="@string/image_poster"
            android:scaleType="centerCrop"
            tools:src="@drawable/img_dummy_poster" />

        <TextView
            android:id="@+id/tv_title_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_poster_favorite"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@string/dummy_title" />

        <TextView
            android:id="@+id/tv_release_date_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_favorite"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_poster_favorite"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="@string/dummy_release_year" />

        <android.support.v7.widget.AppCompatRatingBar
            android:id="@+id/rb_favorite"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_release_date_favorite"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/img_poster_favorite"
            android:numStars="5"
            android:stepSize="0.5"
            tools:rating="3.5" />

        <TextView
            android:id="@+id/tv_overview_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rb_favorite"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_poster_favorite"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@android:color/black"
            tools:text="@string/dummy_overview" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/favorite"
            android:src="@drawable/ic_favorite_black_24dp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>