<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.SettingFragment">

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/daily_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="20dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="20dp"
        android:text="@string/daily_reminder"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/black" />


    <android.support.v7.widget.SwitchCompat
        android:id="@+id/release_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="20dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="20dp"
        android:text="@string/release_reminder"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/change_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="20dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="20dp"
        android:text="@string/change_language"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/black" />

</LinearLayout>